[project]
name = "buff163-price-getter"
version = "0.6.1"
description = "A Python module for retrieving CS2 item prices from Buff163 marketplace"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "bs4>=0.0.2",
    "requests>=2.32.3",
]

[tool.setuptools]
packages = ["buff163_price_getter", "currency_convert"]
