[project]
name = "buff163-price-getter"
version = "0.8.0"
description = "A Python module for retrieving CS2 item prices from Buff163 marketplace"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "aiohttp>=3.10.11",
    "beautifulsoup4>=4.12.3",
    "requests>=2.32.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
